# utorrent-notifier-daemon

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  main.c  service.c  service.h  webuiapi.c  webuiapi.h
conf/: utorrent-notifier.cfg
conf/init.d/: utorrent-notifier
services/: templace.c  template.c
services/boxcar/: boxcar.c
services/prowl/: prowl.c
services/syslog/: syslog.c
src/: .gitignore  Makefile.am  main.c  service.c  service.h  webuiapi.c  webuiapi.h
src/services/boxcar/: boxcar.c
src/services/prowl/: prowl.c
src/services/syslog/: syslog.c
